# kaya-gtk-wpf

./: .gitignore  .gitmodules  AGENTS.md  README.md
gtk/: .eslintignore  .eslintrc.js  .gitignore  .gitlab-ci.yml  FLATHUB_NOTES.md  Makefile  README.md  ca.deobald.Kaya.cmb  ca.deobald.Kaya.json  generated-sources.json  meson.build  org.savebutton.SaveButton.json  package-lock.json  package.json
gtk/.github/workflows/: macos.yml
gtk/.zed/: tasks.json
gtk/build-aux/flatpak/: ca.deobald.Kaya.json  org.savebutton.SaveButton.json
gtk/build-aux/macos/: Info.plist.in  bundle.sh  create-dmg.sh  kaya-launcher.js
gtk/data/: ca.deobald.Kaya.data.gresource.xml  ca.deobald.Kaya.desktop.in  ca.deobald.Kaya.gschema.xml  ca.deobald.Kaya.metainfo.xml.in  everything_window.ui  meson.build  new_save_window.ui  org.savebutton.SaveButton.data.gresource.xml  org.savebutton.SaveButton.desktop.in  org.savebutton.SaveButton.gschema.xml  org.savebutton.SaveButton.metainfo.xml.in  preferences.ui  style.css  window.ui
gtk/data/icons/: meson.build
gtk/doc/: PROMPTS.md
gtk/doc/plan/: 2026-03-05-add-basic-search.md  2026-03-06-move-new-save-to-own-window.md  2026-03-07-r-fix-flatpak-app-id.md  2026-03-07-r-rename-ca-deobald-to-org-savebutton.md  PLAN.md
gtk/po/: POTFILES.in
gtk/src/: ca.deobald.Kaya.src.gresource.xml  main.ts  meson.build  org.savebutton.SaveButton.src.gresource.xml
gtk/src/models/: meta.ts  search_result.ts
gtk/src/services/: file_service.ts  search_service.ts  settings_service.ts  sync_manager.ts  sync_service.ts
gtk/src/views/: everything_window.ts  new_save_window.ts  preferences.ts  window.ts
gtk/tests/: meta.test.ts  search_result.test.ts
gtk/win10iso/: slipstream.sh
wpf/: .gitignore  README.md  build.ps1
wpf/doc/: PROMPTS.md
wpf/doc/design/: DESIGN.md
wpf/doc/plan/: 2026-03-05-example-wpf-port.md  2026-03-07-port-search-newsave-tags-rename.md  PLAN.md
wpf/src/Kaya.Core/Models/: Meta.cs
wpf/src/Kaya.Core/Services/: SettingsService.cs
wpf/src/Kaya.Wpf/: AboutWindow.xaml  Kaya.Wpf.csproj  MainWindow.xaml  MainWindow.xaml.cs  NewSaveWindow.xaml
wpf/tests/Kaya.Tests/: MetaTests.cs
